# yf_amazon

./: .gitattributes  .gitignore
backend/: .dockerignore  Containerfile  backend.py  cache.py  pyproject.toml  test_live_server.py
backend/recommend/: recommend.py  test_recommend.py
deployments/elastic/: custom-logstash.conf  docker-compose.yml  merged_products.csv
deployments/mongodb/: compose.yaml
deployments/pgsql/: compose-pgvector.yaml  compose.yaml
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: ProductCard.tsx  RatingCard.tsx
frontend/src/app/services/: api.ts
frontend/src/app/types/: index.ts
scripts/: benchmark.py  calc_embedding.py  import_to_mongodb.py  import_to_pgsql.py  pyproject.toml  update.py
scripts/results/: README.md  data.md
